Bug 108359: crash when opening subscribe dialog ( crash in grid code ). patch by evaughan, r=jag, sr=hyatt